<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tasks.alarm.AlarmActivity">
    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.eccard.conquer.ui.tasks.alarm.AlarmViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_s"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.goalName}"
            android:layout_marginStart="16dp"
            tools:text="Aprender tudo sobre Biologia"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/alarmCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/it_s_time_to"
            android:textStyle="bold"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.taskDescription}"
            android:layout_marginStart="16dp"
            tools:text="Estudar plantas"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_alarm"
            android:onClick="@{() -> viewModel.setAlarm()}"/>
    </LinearLayout>

</layout>